Fixed the position of the dropdown menus to align with the left side of the button

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -56,16 +56,13 @@
 	user-select: none; /* Standard syntax */
 }
 
-.fileDiv {
+.fileDiv,
+.toolsDiv {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 	margin: 12px;
-}
-
-.fileDiv .dropdown {
-	margin-left: 35px;
 }
 
 .navButton {
